# rolling-reader

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  integration_test.py  proposal-2026-04-15.md  pyproject.toml  review-prompt.md  validate_needs_browser.py
src/rolling_reader/: cli.py  dispatcher.py  models.py
src/rolling_reader/cache/: __init__.py  profile.py
src/rolling_reader/extractor/: __init__.py  cdp.py  clean.py  http.py  state.py
src/scrapekit/: __init__.py  cli.py  dispatcher.py  models.py
src/scrapekit/cache/: __init__.py  profile.py
src/scrapekit/extractor/: __init__.py  cdp.py  http.py  state.py
