[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapekit"
version = "0.1.0"
description = "Local-first CLI web scraper with automatic strategy selection"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.14",
    "typer>=0.12",
    "playwright>=1.44",
]

[project.scripts]
scrape = "scrapekit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/scrapekit"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
