[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rolling-reader"
version = "0.6.6"
description = "Local-first web scraper that automatically rolls through HTTP → browser → JS state extraction"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.14",
    "typer>=0.12",
    "playwright>=1.44",
    "trafilatura>=1.12",
]

[project.scripts]
rr = "rolling_reader.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rolling_reader"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
